# settlement-demo

./: .env.example  Cargo.toml  README.md  install-cli.sh  rust-toolchain.toml  txs.json
contracts/evm/: deploy.sh  remappings.txt
contracts/evm/script/: Deploy.s.sol
contracts/evm/src/: OrderMerkleVerifier.sol
contracts/evm/src/fixtures/: merkle_proofs.json  merkle_proofs_3.json  merkle_proofs_5.json
contracts/evm/test/: OrderMerkleVerifier.t.sol
contracts/solana/: Anchor.toml  README.md  deploy.sh  proof.json
contracts/solana/program/: Cargo.toml
contracts/solana/program/src/: lib.rs  merkle.rs  state.rs
contracts/solana/programs/bankai-solana/: Cargo.toml
contracts/solana/programs/bankai-solana/src/: lib.rs  merkle.rs  state.rs
contracts/solana/tests/: settlement.ts  test.ts
contracts/src/: OrderHash.sol  OrderMerkleVerifier.sol
contracts/starknet/: .gitignore  DEPLOYMENT.md  README.md  Scarb.toml  deploy.sh  snfoundry.toml
contracts/starknet/deployments/: .gitkeep
contracts/starknet/src/: lib.cairo
contracts/starknet/tests/: test_settlement.cairo  test_settlement_fork.cairo
contracts/test/: OrderHash.t.sol
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  proof.json  txs.json
script/src/client/: chain_client.rs  evm_client.rs  mod.rs  solana_client.rs  starknet_client.rs
