[workspace]
members = [
    "lib",
    "program",
    "script",
]
default-members = ["lib", "script"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bankai-sdk = { git = "https://github.com/bankaixyz/bankai-sdk", package = "bankai-sdk", rev = "e6123357f5322feba9560aa0ed1b275c228ae4fb" }
bankai-types = { git = "https://github.com/bankaixyz/bankai-sdk", package = "bankai-types", rev = "e6123357f5322feba9560aa0ed1b275c228ae4fb", default-features = false, features = ["verifier-types"] }
bankai-verify = { git = "https://github.com/bankaixyz/bankai-sdk", package = "bankai-verify", rev = "e6123357f5322feba9560aa0ed1b275c228ae4fb", default-features = false }

sp1-sdk = "5.2.2"
sp1-zkvm = "5.2.2"


alloy-sol-types = "1.0"
alloy-primitives = { version = "1.3.1", default-features = false, features = ["serde"] }
alloy-consensus = { version = "1.0", default-features = false }
alloy-provider = "1.0"
alloy-rpc-types = "1.0"
alloy-signer = "1.0"
alloy-signer-local = "1.0"
alloy-network = "1.0"
tokio = { version = "1.39.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
dotenv = "0.15.0"
starknet = "0.17"
garaga_rs = { git = "https://github.com/keep-starknet-strange/garaga.git", tag = "v0.18.2", default-features = false }

# Please do not remove the code bel
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e927cc146d7bc91e944cf6d9c55b05d45e", default-features = false, features = ["portable"] }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e927cc146d7bc91e944cf6d9c55b05d45e" }
