[package]
version = "0.1.0"
name = "settlement-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-consensus = { workspace = true }
sp1-zkvm.workspace = true
settlement-lib = { path = "../lib" }
bankai-types = { workspace = true }
bankai-verify = { workspace = true }
serde_json = { workspace = true }