[package]
version = "0.1.0"
name = "settlement-script"
edition = "2021"
default-run = "settlement-demo"

[[bin]]
name = "settlement-demo"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "merkle"
path = "src/bin/merkle.rs"

[dependencies]
sp1-sdk.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
tracing.workspace = true
hex.workspace = true
dotenv.workspace = true
alloy-sol-types = { workspace = true }
settlement-lib = { path = "../lib" }
bankai-sdk.workspace = true
alloy-primitives.workspace = true
[build-dependencies]
sp1-build = "5.2.2"
