[package]
version = "0.1.0"
name = "settlement-script"
edition = "2021"
default-run = "settlement-demo"

[lib]
name = "settlement_script"
path = "src/lib.rs"

[[bin]]
name = "settlement-demo"
path = "src/bin/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
sp1-sdk.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
clap.workspace = true
tracing.workspace = true
hex.workspace = true
dotenv.workspace = true
alloy-sol-types = { workspace = true }
settlement-lib = { path = "../lib" }
bankai-sdk.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-network.workspace = true
solana-sdk = "2.0"
solana-client = "2.0"
bs58 = "0.5"
borsh = "1.5"
async-trait = "0.1"
starknet.workspace = true
garaga_rs.workspace = true

[build-dependencies]
sp1-build = "5.2.2"
